--- a/graphql-mysql-app/package.json
+++ b/graphql-mysql-app/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server-express": "^3.12.1",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-graphql": "^0.12.0",
     "graphql": "^15.8.0",
